glFusion ChangeLog

v1.1.9
------
- FileMgmt: Fixed SQL error on file submissions when filemgmt Admin group
  has been renamed (Mark)
- Forum: Several improvements to the phpBB3 import utility, thanks to wootcat
  for providing a recent phpBB3 database backup for testing. (Mark)
    - ability to import bbcode signatures
    - ability to purge existing glFusion users prior to import
- Media Gallery: Implemented ribbon attribute for audio auto tag, this allows
  the MP3 ribbon player to be embedded via auto tag. (Mark)
- Media Gallery: Updated the MP3 ribbon player to latest version (Mark)
- FileMgmt: Creating new categories did not properly set the upload
  permission (Mark)
- Fixed issue when enabling a plugin that no longer exists in the
  directory tree (Mark)
- Site Tailor: Added new menu element type: topic (Mark)
- Implemented the Portable PHP password hashing framework (Mark)
- Enhanced the advanced search screen (Mark)
- Calendar: If auto tag is not given event id, return original conten (Mark)
- Forum: Fixed issue where deleting a post did not update last post
  info for the topic properly (Mark)
- Reworked username standards " < > $ % & * are not allowed in username (Mark)
- FileMgmt: Do not allow users access to the upload form if they do not
  have permission to upload to any categories. (Mark)
- Polls: Fixed coding error where permissions were not properly checked (Mark)
- What's New block now uses <ul> class list-new-articles for stories (Mark)
- Modified LDAP class so filter variable is now a configuration option (Mark)
- Media Gallery: Enable full screen playback with FlowPlayer by default (Mark)
- Modified My Account block to use blockheader-list templates. Removed
  the hard coded <ul> / </ul> in code.  (Mark)
- Added new block option: login_block, admin can now specify custom block
  template for login block (see theme's functions.php) (Mark)
- Calendar: Add configuration option to select which blocks display (Mark)