@@ -1392,7 +1392,7 @@ function MG_displayMediaImage( $mediaObject, $full, $sortOrder, $comments, $sort
     } else {
         $pid = 0;
     }
-    if ( method_exists($MG_albums[$aid],'getOffset') ) {
+    if ( @method_exists($MG_albums[$aid],'getOffset') ) {
         $aOffset = $MG_albums[$aid]->getOffset();
     } else {
         $aOffset = -1;
