@@ -2,6 +2,7 @@ glFusion ChangeLog
 
 v1.1.9
 ------
+- Forum: Properly clean up attached file to posts that are canceled (Mark)
 - FileMgmt: Fixed SQL error on file submissions when filemgmt Admin group
   has been renamed (Mark)
 - Forum: Several improvements to the phpBB3 import utility, thanks to wootcat
